--- a/mystyle.css
+++ b/mystyle.css
@@ -15,7 +15,7 @@ div {
 h1{
     text-align:center;
     color:#efeCa5;
-    font-size:120px;
+    font-size:100px;
     font-family:Verdana;
 }
 
@@ -23,7 +23,7 @@ h1{
 h3{
     text-align:center;
     color:#89D06A;
-    font-size:85px;
+    font-size:75px;
     font-family:Verdana;
 }
 
@@ -48,9 +48,24 @@ p {
     color:#efa5a5;
     font-size:25px;
     font-family:Verdana;
+
 }
 
 img {
    border-style:solid;
    border-color: #6AD0C5;
+}
+
+
+button {
+    background-color: #F3AB43; 
+    border: none;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family:Verdana;
+    border-radius: 100px;
 }
